Version 1.3
* Fixes from Olaf Wuchnitz, both in calc9.1 and in CALC5Server

Version 1.2
* fix syntax of ocean table and add new entry for YS
* Version for DiFX-1.5

Version 1.1
* fix long path/filename
* NRAO-DiFX-1.1

Version 1.0
* initial version